[gd_scene load_steps=23 format=2]

[ext_resource path="res://actors/physics/PlatformActor.gd" type="Script" id=1]
[ext_resource path="res://actors/enemies/tomato/Brain.gd" type="Script" id=2]
[ext_resource path="res://actors/enemies/tomato/TomatoCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/enemies/CutoutCharacter.gd" type="Script" id=4]
[ext_resource path="res://actors/physics/StateMachine.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/physics/State.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/enemies/tomato/states/Idle.gd" type="Script" id=7]
[ext_resource path="res://actors/physics/Move.tscn" type="PackedScene" id=8]
[ext_resource path="res://actors/physics/Gravity.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/Command.gd" type="Script" id=10]
[ext_resource path="res://actors/enemies/tomato/states/Walk.gd" type="Script" id=11]
[ext_resource path="res://actors/physics/Stop.tscn" type="PackedScene" id=12]
[ext_resource path="res://actors/enemies/tomato/states/Chase.gd" type="Script" id=13]
[ext_resource path="res://actors/enemies/tomato/states/tomato_state_transition.tres" type="Resource" id=14]
[ext_resource path="res://actors/combat/CombateStateMachine.tscn" type="PackedScene" id=15]
[ext_resource path="res://actors/physics/State.gd" type="Script" id=16]
[ext_resource path="res://actors/combat/HurtBox.tscn" type="PackedScene" id=17]
[ext_resource path="res://actors/enemies/SightArea.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 440, 190 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 130, 70 )

[node name="Tomato" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 3 )

[node name="Brain" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="IdleTime" type="Timer" parent="Brain"]
one_shot = true
autostart = true

[node name="WanderTime" type="Timer" parent="Brain"]
one_shot = true

[node name="Character" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="StateMachine" parent="." instance=ExtResource( 5 )]

[node name="IdleState" parent="StateMachine" instance=ExtResource( 6 )]
script = ExtResource( 7 )

[node name="Move" parent="StateMachine/IdleState" instance=ExtResource( 8 )]
speed = 300.0

[node name="Gravity" parent="StateMachine/IdleState" instance=ExtResource( 9 )]

[node name="Chase" type="Node" parent="StateMachine/IdleState"]
script = ExtResource( 10 )

[node name="WalkState" parent="StateMachine" instance=ExtResource( 6 )]
script = ExtResource( 11 )

[node name="Move" parent="StateMachine/WalkState" instance=ExtResource( 8 )]
speed = 300.0

[node name="Stop" parent="StateMachine/WalkState" instance=ExtResource( 12 )]

[node name="Gravity" parent="StateMachine/WalkState" instance=ExtResource( 9 )]

[node name="Chase" type="Node" parent="StateMachine/WalkState"]
script = ExtResource( 10 )

[node name="ChaseState" parent="StateMachine" instance=ExtResource( 6 )]
script = ExtResource( 13 )

[node name="Move" parent="StateMachine/ChaseState" instance=ExtResource( 8 )]
speed = 600.0

[node name="Stop" parent="StateMachine/ChaseState" instance=ExtResource( 12 )]

[node name="StunState" parent="StateMachine" instance=ExtResource( 6 )]
transition = ExtResource( 14 )

[node name="SquashState" parent="StateMachine" instance=ExtResource( 6 )]
transition = ExtResource( 14 )

[node name="CombatStateMachine" parent="." instance=ExtResource( 15 )]
editor/display_folded = true

[node name="IdleState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 16 )

[node name="WalkState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 16 )

[node name="ChaseState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 16 )

[node name="StunState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 16 )

[node name="SquashState" type="Node2D" parent="CombatStateMachine"]
script = ExtResource( 16 )

[node name="HurtBox" parent="." groups=[
"enemy",
] instance=ExtResource( 17 )]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -50 )
shape = SubResource( 2 )

[node name="OuterAttackRange" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="Shape" type="CollisionShape2D" parent="OuterAttackRange"]
position = Vector2( 0, -190 )
shape = SubResource( 4 )

[node name="InnerAttackRange" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="Shape" type="CollisionShape2D" parent="InnerAttackRange"]
position = Vector2( 0, -70 )
shape = SubResource( 5 )

[node name="SightArea" parent="." instance=ExtResource( 18 )]
[connection signal="timeout" from="Brain/IdleTime" to="Brain" method="_on_IdleTime_timeout"]
[connection signal="timeout" from="Brain/WanderTime" to="Brain" method="_on_WanderTime_timeout"]
[connection signal="state_changed" from="StateMachine" to="Brain" method="_on_StateMachine_state_changed"]
[connection signal="state_changed" from="StateMachine" to="CombatStateMachine" method="change_state_to"]
[connection signal="entered" from="StateMachine/IdleState" to="Character" method="play" binds= [ "idle" ]]
[connection signal="entered" from="StateMachine/WalkState" to="Character" method="play" binds= [ "walk (copy)" ]]
[connection signal="entered" from="StateMachine/ChaseState" to="Character" method="play" binds= [ "chase" ]]
[connection signal="state_changed" from="CombatStateMachine" to="Brain" method="_on_CombateStateMachine_state_changed"]
[connection signal="area_exited" from="OuterAttackRange" to="Brain" method="_on_OuterAttackRange_area_exited"]
[connection signal="area_entered" from="InnerAttackRange" to="Brain" method="_on_InnerAttackRange_area_entered"]
[connection signal="spotted" from="SightArea" to="Brain" method="_on_SightArea_spotted"]
